finished only android

--- a/samples/browser-sample/src/main/resources/index.html
+++ b/samples/browser-sample/src/main/resources/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Omni</title>
+    <title>Browser Sample</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/logo/logo_icon_green.png"/>
@@ -91,7 +91,7 @@
 <div id="root">
     <div class="initial-render">
         <h1>
-            Test Website
+            Browser Sample
         </h1>
         <img id=loader src="/imgs/loading/loader.svg" style="min-width: 200px"/>
         <br/>
@@ -111,7 +111,7 @@
     }
 
     setTimeout(function () {
-        loadScript("/broser-sample.js")
+        loadScript("/browser-sample.js")
     }, 10);
 </script>
 </html>
